--- a/index.html
+++ b/index.html
@@ -5,30 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-02</title>
-    <link rel="stylesheet" href="./styles/normalize.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css"> 
-    
+        
   </head>
   <body>
     <!--main page-->
     <header class="header">
+      <div class="container main-nav">
       <a href="./index.html" class="logo"><span class="low-logo">web</span>studio</a>
       <nav>
-        <ul>
-          <li><a href="./index.html" class="nav-links">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-          <li><a href="./portfolio.html" class="nav-links">Contacts</a></li>
+        <ul class="site-nav">
+          <li class="item"><a href="./index.html" class="nav-links">Studio</a></li>
+          <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+          <li class="item"><a href="./portfolio.html" class="nav-links">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com" class="contacts">mailto:info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
+      <ul class="mail">
+        <li class="item"><a href="mailto:info@devstudio.com" class="contacts">mailto:info@devstudio.com</a></li>
+        <li class="item"><a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
       </ul>
+      </div>
       <!--header-->
     </header>
     <main>
@@ -38,11 +43,11 @@
         <button type="button" class="main-button">Order Service</button>
       </section>
       <section>
-        <h2>Feature</h2>
+        <h2 class="feature">Feature</h2>
 
-        <ul>
+        <ul class="feature_list">
           <!--feature1-->
-          <li>
+          <li class="item">
             <h3 class="card-title">Strategy</h3>
             <p class="card-text">
               Our goal is to identify the business problem to walk away with the
@@ -50,7 +55,7 @@
             </p>
           </li>
           <!--feature 2-->
-          <li>
+          <li class="item">
             <h3 class="card-title">Punctuality</h3>
             <p class="card-text">
               Bring the key message to the brand's audience for the best price
@@ -58,7 +63,7 @@
             </p>
           </li>
           <!--feature 3-->
-          <li>
+          <li class="item">
             <h3 class="card-title">Diligence</h3>
             <p class="card-text">
               Research and confirm brands that present the strongest digital
@@ -66,7 +71,7 @@
             </p>
           </li>
           <!--feature 4-->
-          <li>
+          <li class="item">
             <h3 class="card-title">Technologies</h3>
             <p class="card-text">
               Design practice focused on digital experiences. We bring forth a
@@ -76,9 +81,9 @@
         </ul>
       </section>
       <!--section 2-->
-      <section>
+      <section class="section-list">
         <h2 class="card-title">What are we doing</h2>
-        <ul>
+        <ul class="card-title_list">
           <li>
             <img src="images/monitor.jpg" width="360" height="300" alt="img1" />
           </li>
@@ -92,8 +97,8 @@
         <!--section 3-->
       </section>
       <section class="team-list">
-        <h2 class="card-title">Our Team</h2>
-        <ul>
+        <h2 class="card-title_team">Our Team</h2>
+        <ul class="flex_container">
           <li class="team-list-item">
             <img
               src="images/Mark_Guerro.jpg"
