--- a/portfolio.html
+++ b/portfolio.html
@@ -6,41 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goit-markup-hw-02</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
+    
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container main-nav">
         <a href="#" class="logo"> <span class="low-logo"> web</span>studio</a>
         
         <nav>
-            <ul>
-                <li>
+            <ul class="site-nav">
+                <li class="item">
                     <a href="./index.html" class="nav-links">Studio</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./portfolio.html" class="nav-links">Portfolio</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./portfolio.html" class="nav-links">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com" class="contacts">mailto:info@devstudio.com</a></li>
-            <li> <a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
-        </ul></div>
+        <ul class="mail">
+            <li class="item"> <a href="mailto:info@devstudio.com" class="contacts">mailto:info@devstudio.com</a></li>
+            <li class="item"> <a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
+        </ul>
+        </div>
     </header>
 
     <main>
         <section>
             <div class="container">
-            <h1>portfolio-button-list</h1>
+            <h1 class="pbl">portfolio-button-list</h1>
             <ul class="portfolio-btn_list">
                 <li class="portfolio-btn_item">
                     <button type="button" class="portfolio-btn">All</button>
@@ -113,9 +120,9 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer>
         <div class="container">
-            <div class="footer-logo_box">
+            <div class="footer">
         <a href="#" class="foot-logo"><span class="low-logo"> web</span>studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
