--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
 
     <main>
         <section>
-            <div class="container">
+        <div class="container_btn">
             <h1 class="pbl">portfolio-button-list</h1>
             <ul class="portfolio-btn_list">
                 <li class="portfolio-btn_item">
@@ -69,51 +69,68 @@
             <ul class="portfolio-cards_list">
                 <li class="portfolio-cards_item">
                     <img src="images/one.jpg" alt="app" width="360">
-                    <div class="portfolio-cards_box">
-                    <h2 class="card-title">Banking App Interface Concept</h2>
+                     <div class="card-content">
+                       <h2 class="card-title">Banking App Interface Concept</h2>
+                       <p class="card-text">App</p>
+                     </div>
+                </li>
+
+                <li class="portfolio-cards_item">
+                    <img src="images/two.jpg" alt="marketing" width="360">
+                    <div class="card-content">
+                    <h2 class="card-title">Cashless Payment</h2>
+                    <p class="card-text">Marketing</p>
+                </div>
+                </li>
+                
+                <li class="portfolio-cards_item">
+                    <img src="images/three.jpg" alt="app" width="360">
+                    <div class="card-content">
+                    <h2 class="card-title">Meditaion App</h2>
                     <p class="card-text">App</p>
                 </div>
                 </li>
                 <li class="portfolio-cards_item">
-                    <img src="images/two.jpg" alt="marketing" width="360">
-                    <h2 class="card-title">Cashless Payment</h2>
-                    <p class="card-text">Marketing</p>
-                </li>
-                <li class="portfolio-cards_item">
-                    <img src="images/three.jpg" alt="app" width="360">
-                    <h2 class="card-title">Meditaion App</h2>
-                    <p class="card-text">App</p>
-                </li>
-                <li class="portfolio-cards_item">
                     <img src="images/four.jpg" alt="marketing" width="360">
+                    <div class="card-content">
                     <h2 class="card-title">Taxi Service</h2>
                         <p class="card-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio-cards_item">
                     <img src="images/five.jpg" alt="design" width="360">
+                    <div class="card-content">
                     <h2 class="card-title"> Screen Illustrations</h2>
                         <p class="card-text">Design</p>
+                    </div>
                 </li>
                 <li class="portfolio-cards_item">
                     <img src="images/six.jpg" alt="marketing" width="360">
+                    <div class="card-content">
                     <h2 class="card-title">Online Courses</h2>
                         <p class="card-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio-cards_item">
                     <img src="images/seven.jpg" alt="design" width="360">
+                    <div class="card-content">
                     <h2 class="card-title">Instagram Stories Concept</h2>
                     <p class="card-text">Design</p>
+                </div>
                 </li>
                 <li class="portfolio-cards_item">
                     <img src="images/eight.jpg" alt="web site" width="360">
+                    <div class="card-content">
                     <h2 class="card-title">Organic Food</h2>
                     <p class="card-text">Web Site</p>
+                </div>
                 </li>
                 <li class="portfolio-cards_item">
                     <img src="images/nine.jpg" alt="web site" width="360">
+                    <div class="card-content">
                     <h2 class="card-title">Fresh Coffee</h2>
                     <p class="card-text">Web Site</p>
-
+                </div>
                 </li>
 
             </ul>
