update html file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              </ul>
             </nav>
             <ul class="mail">
-              <li class="item"><a>mailto:</a><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+              <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
               <li class="item"><a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
             </ul>
         </div>
@@ -39,14 +39,14 @@
     </header>
     <main>
       <!--section 1-->
-      <section_1 class="section_1">
+      <section class="section_hero">
          <div class="container_hero">
            <h1 class="hero-title">Effective Solutions for Your Business</h1>
            <button type="button" class="main-button">Order Service</button>
          </div>
-      </section_1>
-      <section>
-        <h2 class="container_feature">Feature</h2>
+      </section>
+      <section class="feature">
+        <div class="container_feature">Feature</div>
         <ul class="feature_list">
           <!--feature1-->
           <li class="item">
@@ -83,7 +83,7 @@
         </ul>
       </section>
       <!--section 2-->
-      <section_2 class="section_2">
+      <section class="section_wawd">
       <div class="section-list">
         <h2 class="card-title-head">What are we doing</h2>
         <ul class="card-title_list">
@@ -99,8 +99,8 @@
         </ul>
         <!--section 3-->
       </div>
-      </section_2>
-      <section_3 class="section_3">
+      </section>
+      <section class="section_our-team">
         <div class="team-list">
         <h2 class="card-title_team">Our Team</h2>
         <ul class="flex_container">
