--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
             </ul>
         </nav>
         <ul class="mail">
-            <li class="item"> <a>mailto:</a><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-            <li class="item"> <a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
+            <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+11(000)111-11-11" class="contacts">+11(000)111-11-11</a></li>
         </ul>
         </div>
     </header>
