update html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 
     <main>
         <section>
-        <div class="container_btn">
+        <div class="container">
             <h1 hidden>portfolio-button-list</h1>
             <ul class="portfolio-btn_list">
                 <li class="portfolio-btn_item">
