--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="filters">
         <div class="container">
             <h1 hidden>portfolio-button-list</h1>
             <ul class="portfolio-btn_list">
@@ -140,7 +140,7 @@
     </main>
     <footer>
         <div class="footer">
-            <div class="container_footer">
+            <div class="container">
                 <a href="./index.html" class="foot-logo"><span class="low-logo"> web</span>studio</a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.
