--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button type="button" class="main-button">Order Service</button>
       </div>
     </section>
-      <section class="feature">
+      <section class="container">
         <h2 hidden>Feature</h2>
 
         <ul class="feature_list">
