--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 <body>
     <header>
       <div class="container">
-        <div class="container main-nav">
+        <div class="main-nav">
          <a href="./index.html" class="logo"><span class="low-logo"> web</span>studio</a>
           <nav>
             <ul class="site-nav">
