--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <button type="button" class="main-button">Order Service</button>
       </div>
     </section>
-      <section class="container">
+      <section class="feature">
         <h2 hidden>Feature</h2>
+        <div class="container">
 
         <ul class="feature_list">
           <!--feature1-->
@@ -86,6 +87,7 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <!--section 2-->
     <section class="What_doing">
@@ -162,15 +164,13 @@
       </section>
       <!--footer-->
     </main>
-    <footer>
-      <div class="footer">
+      <footer class="footer">
         <div class="container">
            <a href="./index.html" class="foot-logo"><span class="low-logo">web</span>studio</a>
            <p class="footer-text"> Increase the flow of customers and sales for your business with digital
               marketing & growth solutions.
            </p>
         </div>
-      </div>
-    </footer>
+      </footer>
   </body>
 </html>
